--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,6 +1,9 @@
 name: Run Telegram Bot
 
 on:
+
+  workflow_dispatch:
+
   schedule:
     - cron: '0 0 * * *'  # Menjalankan setiap hari pada tengah malam UTC
 
